<?xml version="1.0"?>
<package format="2">
  <name>orthomap_viewer</name>
  <version>1.0.0</version>
  <description>The orthomap_viewer package</description>
  <maintainer email="kunihiro.ueda@tier4.jp">Kunihiro Ueda</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
